# fdri_raspberrypicamera

./: .env  .gitignore  README.md  camera_startup.sh  pyproject.toml  setup.sh
.github/workflows/: test-python.yml
config/: config.yaml  rpi-camera.service
docs/: Makefile  conf.py  index.rst
docs/aws/: auth.rst
docs/source/: conf.py  index.rst
docs/sources/: modules.rst  raspberrycam.rst
src/raspberrycam/: __init__.py  __main__.py  awsauth.py  camera.py  config.py  core.py  image.py  location.py  logger.py  raspberrypi.py  s3.py  scheduler.py
tests/: conftest.py  test_config.py  test_image.py  test_location.py  test_scheduler.py
tests/integration/: auth.py  camera.py  conftest.py  core.py
